配置图片、文件、图标文字---备注：htmlloader配置有区别，因为上面配置出现问题，音视频没有测试

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title><%= htmlWebpackPlugin.options.title%></title>
-</head>
-<body>
-    <div id="app"></div>
-    <div id="postcss"></div>
-</body>
-</html>
 
+<head>
+  <meta charset="UTF-8">
+  <title><%= htmlWebpackPlugin.options.title%></title>
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_2133251_hv8afeu1ors.css">
+</head>
+
+<body>
+  <div id="app"></div>
+  <div id="postcss"></div>
+  <img src="./images/favicon.png"></img>
+  <i class="iconfont iconguanzhu"></i>
+</body>
+
+</html>
